// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createMap3D layout > fixes every term at its galaxy position 1`] = `
[
  [
    "security/cia",
    920.837,
    -39.215,
    8.056,
    920.837,
  ],
  [
    "security/threat",
    915.948,
    -5.179,
    -39.254,
    915.948,
  ],
  [
    "security/firewall",
    711.777,
    65.402,
    11.203,
    711.777,
  ],
  [
    "security/mfa",
    813.773,
    35.029,
    21.771,
    813.773,
  ],
  [
    "cs/tcp",
    -729.625,
    -10.723,
    6.484,
    -729.625,
  ],
  [
    "cs/ip",
    -797.231,
    -61.59,
    7.206,
    -797.231,
  ],
  [
    "cs/kernel",
    -890.003,
    38.019,
    1.818,
    -890.003,
  ],
  [
    "cs/process",
    -945.84,
    44.629,
    -15.177,
    -945.84,
  ],
]
`;

exports[`createMap3D layout > fixes every term at its galaxy position 2`] = `
[
  711.777,
  65.402,
  11.203,
  -8.357,
  27.34,
  -164.366,
  -729.625,
  -10.723,
  6.484,
  813.773,
  35.029,
  21.771,
  872.59,
  14.925,
  4.2,
  915.948,
  -5.179,
  -39.254,
  -729.625,
  -10.723,
  6.484,
  -763.536,
  -36.157,
  -3.308,
  -797.231,
  -61.59,
  7.206,
  -945.84,
  44.629,
  -15.177,
  -919.974,
  41.324,
  0.064,
  -890.003,
  38.019,
  1.818,
  920.837,
  -39.215,
  8.056,
  925.374,
  -22.197,
  -16.321,
  915.948,
  -5.179,
  -39.254,
  711.777,
  65.402,
  11.203,
  820.249,
  30.112,
  11.818,
  915.948,
  -5.179,
  -39.254,
  -945.84,
  44.629,
  -15.177,
  -874.825,
  -8.481,
  17.852,
  -797.231,
  -61.59,
  7.206,
  711.777,
  65.402,
  11.203,
  816.729,
  13.094,
  37.682,
  920.837,
  -39.215,
  8.056,
]
`;

exports[`createMap3D layout > fixes every term at its galaxy position 3`] = `
[
  1443.418,
  125.621,
  84.609,
  58.739,
  58.486,
  221.841,
  184.033,
  233.797,
]
`;

exports[`createMap3D paint > paints a filtered map: one family, some terms hidden 1`] = `
{
  "arrows": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "background": "#05060b",
  "blending": [
    2,
    2,
    2,
  ],
  "flow": {
    "colours": [
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
    ],
    "count": 8,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
    ],
    "sizes": [
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
    ],
  },
  "fog": "05060b",
  "glow": [
    0,
    0,
    0,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0,
    0,
    0,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "linkColor": [
    "rgba(251,191,36,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
    "rgba(125,211,252,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
  ],
  "linkVisibility": [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
  ],
  "nodeVisibility": [
    false,
    true,
    true,
    false,
    true,
    true,
    false,
    false,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    0,
    0.5,
  ],
  "web": [
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0.016,
      0.129,
      0.168,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
    ],
  ],
}
`;

exports[`createMap3D paint > paints a highlighted route 1`] = `
{
  "arrows": [
    0,
    5,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "background": "#05060b",
  "blending": [
    2,
    2,
    2,
  ],
  "flow": {
    "colours": [
      0.077,
      0.042,
      0.001,
      0.042,
      0.023,
      0.001,
      0.023,
      0.013,
      0,
      0.011,
      0.006,
      0,
      1.351,
      0.402,
      0.063,
      0.743,
      0.221,
      0.035,
      0.405,
      0.121,
      0.019,
      0.189,
      0.056,
      0.009,
      0.077,
      0.042,
      0.001,
      0.042,
      0.023,
      0.001,
      0.023,
      0.013,
      0,
      0.011,
      0.006,
      0,
      0.024,
      0.029,
      0.038,
      0.013,
      0.016,
      0.021,
      0.007,
      0.009,
      0.012,
      0.003,
      0.004,
      0.005,
      0.077,
      0.023,
      0.004,
      0.042,
      0.013,
      0.002,
      0.023,
      0.007,
      0.001,
      0.011,
      0.003,
      0.001,
      0.077,
      0.042,
      0.001,
      0.042,
      0.023,
      0.001,
      0.023,
      0.013,
      0,
      0.011,
      0.006,
      0,
      0.024,
      0.029,
      0.038,
      0.013,
      0.016,
      0.021,
      0.007,
      0.009,
      0.012,
      0.003,
      0.004,
      0.005,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      14,
      10.85,
      9.1,
      7.98,
      18.2,
      14.105,
      11.83,
      10.374,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
    ],
  },
  "fog": "05060b",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    0.02,
    0.02,
    0.03,
    0.855,
    0.078,
    0.107,
    0.02,
    0.02,
    0.03,
    0.02,
    0.02,
    0.03,
    0.02,
    0.02,
    0.03,
    0.02,
    0.02,
    0.03,
  ],
  "linkColor": [
    "rgba(251,191,36,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
    "rgba(125,211,252,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
  ],
  "linkVisibility": [
    false,
    true,
    false,
    false,
    true,
    false,
    false,
    false,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "rgba(70,74,90,0.25)",
    "#ee4f5c",
    "rgba(70,74,90,0.25)",
    "rgba(70,74,90,0.25)",
    "rgba(70,74,90,0.25)",
    "rgba(70,74,90,0.25)",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.091,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.091,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    0,
    0.5,
  ],
  "web": [
    [
      0.017,
      0,
      0.002,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0.002,
      0.013,
      0.017,
    ],
    [
      0.005,
      0.012,
      0.017,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0.017,
      0,
      0.002,
    ],
    [
      0.005,
      0.012,
      0.017,
    ],
    [
      0.017,
      0,
      0.002,
    ],
  ],
}
`;

exports[`createMap3D paint > paints a selection and flies to it 1`] = `
{
  "arrows": [
    5,
    0,
    0,
    0,
    0,
    5,
    0,
    5,
  ],
  "background": "#05060b",
  "blending": [
    2,
    2,
    2,
  ],
  "flow": {
    "colours": [
      1.351,
      0.729,
      0.025,
      0.743,
      0.401,
      0.014,
      0.405,
      0.219,
      0.007,
      0.189,
      0.102,
      0.003,
      0.077,
      0.023,
      0.004,
      0.042,
      0.013,
      0.002,
      0.023,
      0.007,
      0.001,
      0.011,
      0.003,
      0.001,
      0.077,
      0.042,
      0.001,
      0.042,
      0.023,
      0.001,
      0.023,
      0.013,
      0,
      0.011,
      0.006,
      0,
      0.024,
      0.029,
      0.038,
      0.013,
      0.016,
      0.021,
      0.007,
      0.009,
      0.012,
      0.003,
      0.004,
      0.005,
      1.351,
      0.402,
      0.063,
      0.743,
      0.221,
      0.035,
      0.405,
      0.121,
      0.019,
      0.189,
      0.056,
      0.009,
      0.077,
      0.042,
      0.001,
      0.042,
      0.023,
      0.001,
      0.023,
      0.013,
      0,
      0.011,
      0.006,
      0,
      0.415,
      0.513,
      0.671,
      0.228,
      0.282,
      0.369,
      0.124,
      0.154,
      0.201,
      0.058,
      0.072,
      0.094,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      18.2,
      14.105,
      11.83,
      10.374,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      18.2,
      14.105,
      11.83,
      10.374,
      14,
      10.85,
      9.1,
      7.98,
      18.2,
      14.105,
      11.83,
      10.374,
    ],
  },
  "fog": "05060b",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    1,
    1,
    1,
    0.02,
    0.02,
    0.03,
    0.078,
    0.319,
    0.855,
    0.02,
    0.02,
    0.03,
    0.02,
    0.02,
    0.03,
    0.02,
    0.02,
    0.03,
  ],
  "linkColor": [
    "rgba(251,191,36,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
    "rgba(125,211,252,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
  ],
  "linkVisibility": [
    true,
    false,
    false,
    false,
    false,
    true,
    false,
    true,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#ffffff",
    "rgba(70,74,90,0.25)",
    "#4f99ee",
    "rgba(70,74,90,0.25)",
    "rgba(70,74,90,0.25)",
    "rgba(70,74,90,0.25)",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.091,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.091,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        96,
        51,
        "stroke requires @48,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#0a0a0a shadow=undefined",
        "fill requires @48,25.5 font=500 36px system-ui, sans-serif fill=#e5e7eb stroke=#0a0a0a shadow=undefined",
      ],
      "at": [
        -8.64,
        27.34,
        -77.761,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        0.035,
        0.019,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        106,
        51,
        "stroke mitigates @53,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#0a0a0a shadow=undefined",
        "fill mitigates @53,25.5 font=500 36px system-ui, sans-serif fill=#e5e7eb stroke=#0a0a0a shadow=undefined",
      ],
      "at": [
        817.056,
        30.112,
        -1.104,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        0.039,
        0.019,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        116,
        51,
        "stroke implements @58,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#0a0a0a shadow=undefined",
        "fill implements @58,25.5 font=500 36px system-ui, sans-serif fill=#e5e7eb stroke=#0a0a0a shadow=undefined",
      ],
      "at": [
        816.518,
        13.094,
        23.656,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        0.042,
        0.019,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    0,
    0.5,
  ],
  "web": [
    [
      0,
      0,
      0,
    ],
    [
      0.017,
      0,
      0.002,
    ],
    [
      0.002,
      0.013,
      0.017,
    ],
    [
      0.005,
      0.012,
      0.017,
    ],
    [
      0.168,
      0.016,
      0.061,
    ],
    [
      0,
      0,
      0,
    ],
    [
      0.005,
      0.012,
      0.017,
    ],
    [
      0,
      0,
      0,
    ],
  ],
}
`;

exports[`createMap3D paint > paints a selection and flies to it 2`] = `
[
  "[{"x":1135.0592349251772,"y":2467.690217235098,"z":3027.209300467975},{"x":-0.04553498367205577,"y":8.296549099257838,"z":0.2632473777100639},null]",
  "[{"x":971.7446655719175,"y":195.40226719294367,"z":15.29503100793692},{"x":711.7768658083405,"y":65.40226719294368,"z":11.203199378371085},1200]",
]
`;

exports[`createMap3D paint > paints the overview 1`] = `
{
  "arrows": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "background": "#05060b",
  "blending": [
    2,
    2,
    2,
  ],
  "flow": {
    "colours": [
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.916,
      0.273,
      0.043,
      0.504,
      0.15,
      0.024,
      0.275,
      0.082,
      0.013,
      0.128,
      0.038,
      0.006,
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.281,
      0.348,
      0.455,
      0.155,
      0.191,
      0.25,
      0.084,
      0.104,
      0.137,
      0.039,
      0.049,
      0.064,
      0.916,
      0.273,
      0.043,
      0.504,
      0.15,
      0.024,
      0.275,
      0.082,
      0.013,
      0.128,
      0.038,
      0.006,
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.281,
      0.348,
      0.455,
      0.155,
      0.191,
      0.25,
      0.084,
      0.104,
      0.137,
      0.039,
      0.049,
      0.064,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
    ],
  },
  "fog": "05060b",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
  ],
  "linkColor": [
    "rgba(251,191,36,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
    "rgba(125,211,252,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
  ],
  "linkVisibility": [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    0,
    0.5,
  ],
  "web": [
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.016,
      0.129,
      0.168,
    ],
    [
      0.054,
      0.119,
      0.166,
    ],
    [
      0.168,
      0.016,
      0.061,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.054,
      0.119,
      0.166,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
  ],
}
`;

exports[`createMap3D paint > paints the overview with every link shown 1`] = `
{
  "arrows": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "background": "#05060b",
  "blending": [
    2,
    2,
    2,
  ],
  "flow": {
    "colours": [
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.916,
      0.273,
      0.043,
      0.504,
      0.15,
      0.024,
      0.275,
      0.082,
      0.013,
      0.128,
      0.038,
      0.006,
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.281,
      0.348,
      0.455,
      0.155,
      0.191,
      0.25,
      0.084,
      0.104,
      0.137,
      0.039,
      0.049,
      0.064,
      0.916,
      0.273,
      0.043,
      0.504,
      0.15,
      0.024,
      0.275,
      0.082,
      0.013,
      0.128,
      0.038,
      0.006,
      0.916,
      0.495,
      0.017,
      0.504,
      0.272,
      0.009,
      0.275,
      0.148,
      0.005,
      0.128,
      0.069,
      0.002,
      0.281,
      0.348,
      0.455,
      0.155,
      0.191,
      0.25,
      0.084,
      0.104,
      0.137,
      0.039,
      0.049,
      0.064,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
    ],
  },
  "fog": "05060b",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
  ],
  "linkColor": [
    "rgba(251,191,36,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
    "rgba(125,211,252,0.9)",
    "rgba(251,146,60,0.9)",
    "rgba(251,191,36,0.9)",
    "rgba(148,163,184,0.9)",
  ],
  "linkVisibility": [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#e5e7eb stroke=undefined shadow=rgba(0,0,0,0.95)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.26,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    0,
    0.5,
  ],
  "web": [
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.016,
      0.129,
      0.168,
    ],
    [
      0.054,
      0.119,
      0.166,
    ],
    [
      0.168,
      0.016,
      0.061,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
    [
      0.054,
      0.119,
      0.166,
    ],
    [
      0.173,
      0.004,
      0.018,
    ],
  ],
}
`;

exports[`createMap3D paint > reports what the lab reads 1`] = `
[
  [
    true,
    true,
  ],
  [
    true,
    false,
  ],
  [
    true,
    true,
  ],
  [
    true,
    false,
  ],
  [
    true,
    false,
  ],
  [
    true,
    false,
  ],
  [
    true,
    false,
  ],
  [
    true,
    false,
  ],
]
`;

exports[`createMap3D paint > reports what the lab reads 2`] = `
[
  true,
  false,
  false,
  true,
]
`;

exports[`createMap3D paint > reports what the lab reads 3`] = `
[
  19.524,
  9.158,
  11.286,
  8.535,
]
`;

exports[`createMap3D paint > reports what the lab reads 4`] = `
[
  "security/threat",
  "security/cia",
  "cs/ip",
  "cs/kernel",
  "cs/tcp",
  "security/firewall",
  "security/mfa",
  "cs/process",
]
`;

exports[`createMap3D theme > repaints for the cream map 1`] = `
{
  "arrows": [
    5,
    0,
    0,
    0,
    0,
    5,
    0,
    5,
  ],
  "background": "#f6f1e7",
  "blending": [
    4,
    4,
    4,
  ],
  "flow": {
    "colours": [
      0.456,
      0.087,
      0.003,
      0.581,
      0.297,
      0.232,
      0.772,
      0.616,
      0.581,
      0.893,
      0.821,
      0.805,
      0.963,
      0.924,
      0.92,
      0.98,
      0.958,
      0.956,
      0.989,
      0.977,
      0.976,
      0.995,
      0.989,
      0.989,
      0.957,
      0.927,
      0.92,
      0.976,
      0.96,
      0.956,
      0.987,
      0.978,
      0.976,
      0.994,
      0.99,
      0.989,
      0.93,
      0.934,
      0.941,
      0.962,
      0.964,
      0.967,
      0.979,
      0.98,
      0.982,
      0.99,
      0.991,
      0.992,
      0.539,
      0.053,
      0.004,
      0.645,
      0.271,
      0.233,
      0.807,
      0.602,
      0.582,
      0.91,
      0.814,
      0.805,
      0.957,
      0.927,
      0.92,
      0.976,
      0.96,
      0.956,
      0.987,
      0.978,
      0.976,
      0.994,
      0.99,
      0.989,
      0.127,
      0.175,
      0.258,
      0.328,
      0.364,
      0.429,
      0.634,
      0.653,
      0.688,
      0.829,
      0.838,
      0.855,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      18.2,
      14.105,
      11.83,
      10.374,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      18.2,
      14.105,
      11.83,
      10.374,
      14,
      10.85,
      9.1,
      7.98,
      18.2,
      14.105,
      11.83,
      10.374,
    ],
  },
  "fog": "f6f1e7",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    0.012,
    0.01,
    0.009,
    1,
    1,
    1,
    0.078,
    0.319,
    0.855,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "linkColor": [
    "rgba(180,83,9,0.9)",
    "rgba(194,65,12,0.9)",
    "rgba(180,83,9,0.9)",
    "rgba(100,116,139,0.9)",
    "rgba(3,105,161,0.9)",
    "rgba(194,65,12,0.9)",
    "rgba(180,83,9,0.9)",
    "rgba(100,116,139,0.9)",
  ],
  "linkVisibility": [
    true,
    false,
    false,
    false,
    false,
    true,
    false,
    true,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#1c1917",
    "rgba(168,160,146,0.35)",
    "#4f99ee",
    "rgba(168,160,146,0.35)",
    "rgba(168,160,146,0.35)",
    "rgba(168,160,146,0.35)",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.12,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#ee4f5c stroke=undefined shadow=undefined",
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#9a131e stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.105,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#4f99ee stroke=undefined shadow=undefined",
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#13529a stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.105,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        96,
        51,
        "stroke requires @48,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#faf6ee shadow=undefined",
        "fill requires @48,25.5 font=500 36px system-ui, sans-serif fill=#292524 stroke=#faf6ee shadow=undefined",
      ],
      "at": [
        -8.64,
        27.34,
        -77.761,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        1,
        1,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        106,
        51,
        "stroke mitigates @53,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#faf6ee shadow=undefined",
        "fill mitigates @53,25.5 font=500 36px system-ui, sans-serif fill=#292524 stroke=#faf6ee shadow=undefined",
      ],
      "at": [
        817.056,
        30.112,
        -1.104,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        1,
        1,
        1,
      ],
      "visible": false,
    },
    {
      "art": [
        116,
        51,
        "stroke implements @58,25.5 font=500 36px system-ui, sans-serif fill=undefined stroke=#faf6ee shadow=undefined",
        "fill implements @58,25.5 font=500 36px system-ui, sans-serif fill=#292524 stroke=#faf6ee shadow=undefined",
      ],
      "at": [
        816.518,
        13.094,
        23.656,
      ],
      "center": [
        0.5,
        -0.25,
      ],
      "opacity": 1,
      "order": 4,
      "scale": [
        1,
        1,
        1,
      ],
      "visible": false,
    },
  ],
  "uniforms": [
    1,
    0.35,
  ],
  "web": [
    [
      1,
      1,
      1,
    ],
    [
      0.979,
      0.97,
      0.971,
    ],
    [
      0.97,
      0.979,
      0.983,
    ],
    [
      0.971,
      0.979,
      0.988,
    ],
    [
      0.832,
      0.703,
      0.734,
    ],
    [
      1,
      1,
      1,
    ],
    [
      0.971,
      0.979,
      0.988,
    ],
    [
      1,
      1,
      1,
    ],
  ],
}
`;

exports[`createMap3D theme > starts on the cream map when asked 1`] = `
{
  "arrows": [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "background": "#f6f1e7",
  "blending": [
    4,
    4,
    4,
  ],
  "flow": {
    "colours": [
      0.484,
      0.132,
      0.053,
      0.716,
      0.523,
      0.479,
      0.845,
      0.74,
      0.716,
      0.928,
      0.879,
      0.867,
      0.563,
      0.1,
      0.053,
      0.759,
      0.505,
      0.479,
      0.869,
      0.73,
      0.716,
      0.939,
      0.874,
      0.867,
      0.484,
      0.132,
      0.053,
      0.716,
      0.523,
      0.479,
      0.845,
      0.74,
      0.716,
      0.928,
      0.879,
      0.867,
      0.171,
      0.216,
      0.295,
      0.544,
      0.569,
      0.612,
      0.751,
      0.765,
      0.789,
      0.884,
      0.89,
      0.901,
      0.563,
      0.1,
      0.053,
      0.759,
      0.505,
      0.479,
      0.869,
      0.73,
      0.716,
      0.939,
      0.874,
      0.867,
      0.484,
      0.132,
      0.053,
      0.716,
      0.523,
      0.479,
      0.845,
      0.74,
      0.716,
      0.928,
      0.879,
      0.867,
      0.171,
      0.216,
      0.295,
      0.544,
      0.569,
      0.612,
      0.751,
      0.765,
      0.789,
      0.884,
      0.89,
      0.901,
    ],
    "count": 28,
    "positions": [
      669.911,
      63.19,
      1.289,
      679.89,
      63.717,
      3.599,
      689.869,
      64.244,
      5.942,
      699.847,
      64.772,
      8.318,
      911.752,
      -3.25,
      -35.144,
      904.633,
      -0.049,
      -28.587,
      897.318,
      3.152,
      -22.359,
      889.807,
      6.353,
      -16.458,
      -779.152,
      -47.955,
      3.028,
      -771.17,
      -41.943,
      2.113,
      -763.182,
      -35.931,
      1.766,
      -755.189,
      -29.919,
      1.985,
      -915.111,
      40.872,
      -2.209,
      -924.593,
      41.997,
      -5.179,
      -933.838,
      43.123,
      -8.931,
      -942.844,
      44.248,
      -13.465,
      771.372,
      45.689,
      7.515,
      761.889,
      48.871,
      8.656,
      752.353,
      52.052,
      9.587,
      742.766,
      55.234,
      10.308,
      -807.108,
      -54.812,
      8.386,
      -815.475,
      -49.04,
      9.112,
      -823.804,
      -43.269,
      9.579,
      -832.094,
      -37.497,
      9.788,
      817.708,
      12.498,
      23.636,
      808.765,
      16.973,
      23.695,
      799.819,
      21.448,
      23.549,
      790.87,
      25.922,
      23.198,
    ],
    "sizes": [
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
      14,
      10.85,
      9.1,
      7.98,
    ],
  },
  "fog": "f6f1e7",
  "glow": [
    0.855,
    0.078,
    0.107,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.855,
    0.078,
    0.107,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
    0.078,
    0.319,
    0.855,
  ],
  "linkColor": [
    "rgba(180,83,9,0.9)",
    "rgba(194,65,12,0.9)",
    "rgba(180,83,9,0.9)",
    "rgba(100,116,139,0.9)",
    "rgba(3,105,161,0.9)",
    "rgba(194,65,12,0.9)",
    "rgba(180,83,9,0.9)",
    "rgba(100,116,139,0.9)",
  ],
  "linkVisibility": [
    false,
    false,
    false,
    false,
    false,
    false,
    false,
    false,
  ],
  "nodeColor": [
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#ee4f5c",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
    "#4f99ee",
  ],
  "nodeVisibility": [
    true,
    true,
    true,
    true,
    true,
    true,
    true,
    true,
  ],
  "sprites": [
    {
      "art": [
        84,
        64,
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill THREAT @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        915.948,
        31.461,
        -39.254,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill CIA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        920.837,
        -2.891,
        8.056,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        44,
        64,
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill IP @22,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -797.231,
        -33.504,
        7.206,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        16.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        84,
        64,
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill KERNEL @42,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -890.003,
        64.263,
        1.818,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        31.5,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill TCP @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -729.625,
        15.235,
        6.484,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        104,
        64,
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill FIREWALL @52,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        711.777,
        90.737,
        11.203,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        39,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        54,
        64,
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill MFA @27,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        813.773,
        60.364,
        21.771,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        20.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        94,
        64,
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
        "fill PROCESS @47,32 font=600 44px system-ui, sans-serif fill=#292524 stroke=undefined shadow=rgba(250,246,238,1)",
      ],
      "at": [
        -945.84,
        69.963,
        -15.177,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 1,
      "order": 0,
      "scale": [
        35.25,
        24,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        120,
        160,
        "fill Security @60,80 font=700 120px system-ui, sans-serif fill=#9a131e stroke=undefined shadow=undefined",
      ],
      "at": [
        840.584,
        120.402,
        0.444,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.3,
      "order": -1,
      "scale": [
        82.5,
        110,
        1,
      ],
      "visible": true,
    },
    {
      "art": [
        200,
        160,
        "fill Computer science @100,80 font=700 120px system-ui, sans-serif fill=#13529a stroke=undefined shadow=undefined",
      ],
      "at": [
        -840.675,
        99.629,
        0.082,
      ],
      "center": [
        0.5,
        0.5,
      ],
      "opacity": 0.3,
      "order": -1,
      "scale": [
        137.5,
        110,
        1,
      ],
      "visible": true,
    },
  ],
  "uniforms": [
    1,
    0.35,
  ],
  "web": [
    [
      0.788,
      0.702,
      0.709,
    ],
    [
      0.788,
      0.702,
      0.709,
    ],
    [
      0.703,
      0.794,
      0.832,
    ],
    [
      0.707,
      0.788,
      0.879,
    ],
    [
      0.832,
      0.703,
      0.734,
    ],
    [
      0.788,
      0.702,
      0.709,
    ],
    [
      0.707,
      0.788,
      0.879,
    ],
    [
      0.788,
      0.702,
      0.709,
    ],
  ],
}
`;
